[package]
name = "music_dump_lib"
version = "0.1.0"
edition = "2021"
authors = ["chanmaoganda <avaniawang@outlook.com>"]
description = "Some copyright protection file dump."
homepage = "https://github.com/chanmaoganda/NcmDumpLib"
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
keywords = ["ncm", "music", "dump"]

[dependencies]
anyhow = "1.0.43"
base64 = "0.22.1"
aes = "0.8.4"
cipher = { version = "^0.4", features = ["alloc", "block-padding"] }
thiserror = "1.0.62"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
id3 = { version = "1.14.0" }
metaflac = { version = "0.2.7" }
rayon = "1.10.0"